# raushni

./: .eslintrc.json  .flake8  .gitignore  .mypy.ini  LICENSE  Makefile  README.md  clean-restart.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.simple.yml_back  docker-compose.yml  fix-ports.sh  package-lock.json  pyproject.toml
.github/CODEOWNERS/: CODEOWNERS
.github/workflows/: test-backend.yml  test-frontend.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Package.json  entrypoint.sh  package-lock.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: main.py
backend/src/: server.js  server.ts
cms/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  entrypoint.sh  package.json
cms/config/: admin.js  api.js  database.js  (+2 more)
database/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.test.yml  entrypoint.sh  init.sql  ocker-compose.yml  postgresql.conf
frontend/: .dockerignore  .env.development  .env.production  .eslintrc.json  Dockerfile  Dockerfile.dev  Package.json  README.md  entrypoint.sh  fix-lucide-imports.sh  jest.config.js  layout.js  next.config.js  package-lock.json  proxy.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
k8s/: backend-deployment.yaml  configmap.yaml  namespace.yaml  postgres-deployment.yaml  secrets.yaml
nginx/: Dockerfile  default.conf  nginx.conf
prisma/: schema.prisma
scripts/: clean-repo.sh  run-tests.sh  test-coverage.sh
tests/: cypress.config.js
(+179 files in other folders)
